
option java_outer_classname="TaskProgressCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message TaskProgressCommand {
	optional int64 requestId = 1;
	optional string taskId = 2;
}